# nilo-lang

./: .gitignore  LICENSE  Nilo.toml  README.ja.md  README.md  pyproject.toml
docs/: PACKAGES.md
examples/: main.nilo  math_tools.nilo  messages.nilo  regex.nilo  scheduler.nilo
nilo/: __init__.py  __main__.py  ast.py  diagnostics.py  errors.py  interpreter.py  lexer.py  parser.py  runtime.py  token.py
tests/: main_test.nilo  smoke.py
