[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nilo-lang"
version = "0.1.0"
description = "Nilo: a small embeddable programming language with simple modules."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nilo contributors" }]
keywords = ["language", "interpreter", "parser"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Interpreters",
]

[project.scripts]
nilo = "nilo.__main__:main"

[tool.setuptools.packages.find]
include = ["nilo*"]
